<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.thousandscourses.ui.home.HomeFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_favorites"
            app:destination="@id/nav_favorites" />
        <action
            android:id="@+id/action_home_to_account"
            app:destination="@id/nav_account" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.thousandscourses.ui.favorite.FavoritesFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_to_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_favorites_to_account"
            app:destination="@id/nav_account" />
    </fragment>

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.thousandscourses.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_account_to_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_account_to_favorites"
            app:destination="@id/nav_favorites" />
    </fragment>

</navigation>