<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_courses"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterButton"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginStart="16dp"
        app:hintAnimationEnabled="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            style="@style/Widget.App.EditText"
            tools:ignore="RtlSymmetry"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/filterButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_filter"
        android:enabled="false"
        android:background="@drawable/circular_button_background"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="@id/searchInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/searchInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/sortButton"
        style="@style/TextAppearance.App.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/sort_by_date"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        app:drawableRightCompat="@drawable/ic_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchInputLayout"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coursesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/sortButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/dark"/>


</androidx.constraintlayout.widget.ConstraintLayout>